# url-shortener-rust

./: .gitignore  Cargo.toml
entity/: Cargo.toml
entity/src/: url.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/url/: mod.rs  service.rs  urls.rest
src/url/dto/: mod.rs
